Added support for config files

--- a/build.gradle
+++ b/build.gradle
@@ -11,4 +11,7 @@ repositories {
 
 dependencies {
     implementation 'net.dv8tion:JDA:4.2.0_222'
+
+    // https://mvnrepository.com/artifact/org.json/json
+    compile group: 'org.json', name: 'json', version: '20201115'
 }
