--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,19 @@
 plugins {
+    id 'application'
+    id 'com.github.johnrengelman.shadow' version '6.1.0'
     id 'java'
 }
 
 group 'org.acm.auth'
 version '1.0'
+
+mainClassName = 'org.acm.auth.App'
+
+shadowJar {
+    archiveBaseName.set('BotDev')
+    archiveClassifier.set('')
+    archiveVersion.set('')
+}
 
 repositories {
     jcenter()
