--- a/build.gradle
+++ b/build.gradle
@@ -6,9 +6,15 @@ group 'org.acm.auth'
 version '1.0'
 
 repositories {
-    jcenter()
+    mavenCentral()
+    maven {
+        name 'm2-dv8tion'
+        url 'https://m2.dv8tion.net/releases'
+    }
 }
 
 dependencies {
-    implementation 'net.dv8tion:JDA:4.2.0_222'
+    implementation("net.dv8tion:JDA:4.3.0_348")
+    // https://mvnrepository.com/artifact/org.json/json
+    implementation group: 'org.json', name: 'json', version: '20210307'
 }
