--- a/build.gradle
+++ b/build.gradle
@@ -36,4 +36,7 @@ dependencies {
 
     // https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-api
     implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.17.1'
+
+    // https://www.mongodb.com/docs/drivers/java/sync/current/quick-start/
+    implementation 'org.mongodb:mongodb-driver-sync:4.5.1'
 }
