Add create team, update and show rankings commands and docker compose MongoDB configuration

--- a/.env.template
+++ b/.env.template
@@ -1,4 +1,6 @@
-MONGO_DB_ATLAS_USERNAME=
-MONGO_DB_ATLAS_PASSWORD=
-MONGO_DB_ATLAS_DATABASE_NAME=
-MONGO_DB_ATLAS_URL=
+MONGO_DATABASE_URL=
+MONGO_DATABASE_NAME=
+GRADING_CHANNEL_ID=
+DOC_ID=
+DIVIDER_ID=
+SUBMISSIONS_CHANNEL_ID=
