--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,5 +5,8 @@ services:
     restart: unless-stopped
     volumes:
       - /mongodb-data:/data/db
-    ports:
-      - "27017:27017"
+  bot:
+    build: .
+    restart: unless-stopped
+    depends_on:
+      - mongo
